# tossinvest-cli

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODOS.md  go.mod
.github/workflows/: ci.yml  release.yml
auth-helper/: README.md  pyproject.toml
auth-helper/tossctl_auth_helper/: __init__.py  __main__.py  cli.py
cmd/tossctl/: account.go  auth.go  doctor.go  errors.go  errors_test.go  export.go  order.go  orders.go  portfolio.go  quote.go  root.go  stub.go  version.go  watchlist.go
cmd/tossctl-mcp/: main.go  main_test.go
docs/: architecture.md  configuration.md
docs/plans/: 2026-03-11-toss-investment-cli-design.md  2026-03-11-toss-investment-cli-implementation-plan.md  2026-03-13-dangerous-automation-config-design.md  2026-03-13-dangerous-automation-config-implementation-plan.md  2026-03-13-trading-verification-closure-verification-note.md
docs/reverse-engineering/: README.md  auth-notes.md  capture-workflow.md  rpc-catalog.md
docs/trading/: error-codes.md  rpc-catalog.md
internal/auth/: helper.go  playwright.go  service.go  service_test.go
internal/client/: account.go  account_test.go  client.go  completed_orders.go  completed_orders_test.go  errors.go  policy.go  portfolio.go  portfolio_test.go  quote.go  quote_test.go  trading.go  trading_test.go  watchlist.go  watchlist_test.go
internal/config/: paths.go  service.go  service_test.go
internal/doctor/: service.go  service_test.go
schemas/: config.schema.json
tools/: fetch_auth_fixtures.py  fetch_public_fixtures.py  render_homebrew_formula.sh  sample.har  sanitize_har.py
(+35 files in other folders)
